--- a/index.html
+++ b/index.html
@@ -37,7 +37,96 @@
         </button>
       </div>
       <div class="main-content">
-        <h3>hello world</h3>
+        <div class="movie-carousel-wrapper">
+          <div class="movie-carousel-title">Trending</div>
+          <div class="movie-carousel">
+            <div class="movie-card">
+              <img
+                src="./public/8b8R8l88Qje9dn9OE8PY05Nxl1X.webp"
+                alt="Dune Part Two"
+                class="movie-card-image"
+              />
+              <div class="movie-card-title">Dune Part Two</div>
+            </div>
+            <div class="movie-card">
+              <img
+                src="./public/AbFtI353N2Pggl5TxfsI2VtpUt8.webp"
+                alt="The Zone of Interest"
+                class="movie-card-image"
+              />
+              <div class="movie-card-title">The Zone of Interest</div>
+            </div>
+            <div class="movie-card">
+              <img
+                src="./public/d5NXSklXo0qyIYkgV94XAgMIckC.webp"
+                alt="Dune"
+                class="movie-card-image"
+              />
+              <div class="movie-card-title">Dune</div>
+            </div>
+            <div class="movie-card">
+              <img
+                src="./public/kCGlIMHnOm8JPXq3rXM6c5wMxcT.webp"
+                alt="Poor Things"
+                class="movie-card-image"
+              />
+              <div class="movie-card-title">Poor Things</div>
+            </div>
+            <div class="movie-card">
+              <img
+                src="./public/ptpr0kGAckfQkJeJIt8st5dglvd.webp"
+                alt="Oppenheimer"
+                class="movie-card-image"
+              />
+              <div class="movie-card-title">Oppenheimer</div>
+            </div>
+            <div class="movie-card">
+              <img
+                src="./public/qhb1qOilapbapxWQn9jtRCMwXJF.webp"
+                alt="Wonka"
+                class="movie-card-image"
+              />
+              <div class="movie-card-title">Wonka</div>
+            </div>
+            <div class="movie-card">
+              <img
+                src="./public/rULWuutDcN5NvtiZi4FRPzRYWSh.webp"
+                alt="Madame Web"
+                class="movie-card-image"
+              />
+              <div class="movie-card-title">Madame Web</div>
+            </div>
+          </div>
+        </div>
+        <hr class="main-hr" />
+        <!-- rr = recent reviews -->
+        <div class="rr-title">Recent Reviews</div>
+        <div class="rr-wrapper">
+          <div class="rr-container">
+            <div class="rr-title">5/5</div>
+            <div class="rr-description">
+              Oppenheimer is one of Nolan's most different and most challenging
+              film in a while, but it doesn't disappoint.
+            </div>
+            <div class="rr-date">Reviewed on 21/2/2024</div>
+          </div>
+          <div class="rr-container">
+            <div class="rr-title">5/5</div>
+            <div class="rr-description">
+              Oppenheimer is one of Nolan's most different and most challenging
+              film in a while, but it doesn't disappoint.
+            </div>
+            <div class="rr-date">Reviewed on 21/2/2024</div>
+          </div>
+          <div class="rr-container">
+            <div class="rr-title">5/5</div>
+            <div class="rr-description">
+              Oppenheimer is one of Nolan's most different and most challenging
+              film in a while, but it doesn't disappoint.
+            </div>
+            <div class="rr-date">Reviewed on 21/2/2024</div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
