Basic layout done

--- a/index.html
+++ b/index.html
@@ -103,26 +103,26 @@
         <div class="rr-title">Recent Reviews</div>
         <div class="rr-wrapper">
           <div class="rr-container">
-            <div class="rr-title">5/5</div>
+            <div class="rr-rating">5/5</div>
             <div class="rr-description">
               Oppenheimer is one of Nolan's most different and most challenging
-              film in a while, but it doesn't disappoint.
+              film in a while, but it doesn't disappoint. (Oppenheimer)
             </div>
             <div class="rr-date">Reviewed on 21/2/2024</div>
           </div>
           <div class="rr-container">
-            <div class="rr-title">5/5</div>
+            <div class="rr-rating">3/5</div>
             <div class="rr-description">
               Oppenheimer is one of Nolan's most different and most challenging
-              film in a while, but it doesn't disappoint.
+              film in a while, but it doesn't disappoint. (Oppenheimer)
             </div>
             <div class="rr-date">Reviewed on 21/2/2024</div>
           </div>
           <div class="rr-container">
-            <div class="rr-title">5/5</div>
+            <div class="rr-rating">4/5</div>
             <div class="rr-description">
               Oppenheimer is one of Nolan's most different and most challenging
-              film in a while, but it doesn't disappoint.
+              film in a while, but it doesn't disappoint. (Oppenheimer)
             </div>
             <div class="rr-date">Reviewed on 21/2/2024</div>
           </div>
